--- a/languages/ci/locale/en_US/LC_MESSAGES/auberge_lang_mobi.po
+++ b/languages/ci/locale/en_US/LC_MESSAGES/auberge_lang_mobi.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-15 17:36+0200\n"
-"PO-Revision-Date: 2013-03-11 21:41+0200\n"
+"PO-Revision-Date: 2013-03-16 21:30+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -7325,22 +7324,22 @@ msgstr "last %d"
 #: ../code/application/views/helpfile/pofields.php:693
 #, php-format
 msgid "Quich View"
-msgstr ""
+msgstr "Quich View"
 
 #: ../code/application/views/helpfile/pofields.php:694
-#, fuzzy, php-format
+#, php-format
 msgid "Want to receive or send a PDF copy of this quote?"
-msgstr "Want to send a PDF copy of this page or quote by email?"
+msgstr "Want to receive or send a PDF copy of this quote?"
 
 #: ../code/application/views/helpfile/pofields.php:695
 #, php-format
 msgid "%s has sent you a message: "
-msgstr ""
+msgstr "%s has sent you a message: "
 
 #: ../code/application/views/helpfile/pofields.php:696
 #, php-format
 msgid "Here is the link to see the prices, description, maps and much more:"
-msgstr ""
+msgstr "Here is the link to see prices, description, maps and much more:"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
