--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-15 17:36+0200\n"
-"PO-Revision-Date: 2013-03-11 21:30+0200\n"
+"PO-Revision-Date: 2013-03-16 21:40+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -7436,22 +7436,23 @@ msgstr "últimas %d"
 #: ../code/application/views/helpfile/pofields.php:693
 #, php-format
 msgid "Quich View"
-msgstr ""
+msgstr "Vista Rápida"
 
 #: ../code/application/views/helpfile/pofields.php:694
-#, fuzzy, php-format
+#, php-format
 msgid "Want to receive or send a PDF copy of this quote?"
-msgstr "¿Quieres envíar una copia en PDF de esta página u oferta por email?"
+msgstr "¿Quieres enviar o recibir una copia en PDF de esta oferta? "
 
 #: ../code/application/views/helpfile/pofields.php:695
 #, php-format
 msgid "%s has sent you a message: "
-msgstr ""
+msgstr "%s te ha enviado un mensaje"
 
 #: ../code/application/views/helpfile/pofields.php:696
 #, php-format
 msgid "Here is the link to see the prices, description, maps and much more:"
 msgstr ""
+"Aquí está el enlace para ver los precios, descripción, mapas y mucho más."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
