--- a/languages/ci/locale/pl_PL/LC_MESSAGES/auberge_lang_sm.po
+++ b/languages/ci/locale/pl_PL/LC_MESSAGES/auberge_lang_sm.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-15 17:36+0200\n"
-"PO-Revision-Date: 2013-03-12 21:06+0200\n"
+"PO-Revision-Date: 2013-03-16 21:38+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -7363,22 +7362,22 @@ msgstr "ostatnich %d"
 #: ../code/application/views/helpfile/pofields.php:693
 #, php-format
 msgid "Quich View"
-msgstr ""
+msgstr "Szybki Podgląd"
 
 #: ../code/application/views/helpfile/pofields.php:694
-#, fuzzy, php-format
+#, php-format
 msgid "Want to receive or send a PDF copy of this quote?"
-msgstr "Chcesz wysłać PDF tej strony lub link emailem?"
+msgstr "Czy chcesz otrzymać lub wysłać kopię PDF z tym zapytaniem?"
 
 #: ../code/application/views/helpfile/pofields.php:695
 #, php-format
 msgid "%s has sent you a message: "
-msgstr ""
+msgstr "%s wysłała Ci wiadomość:"
 
 #: ../code/application/views/helpfile/pofields.php:696
 #, php-format
 msgid "Here is the link to see the prices, description, maps and much more:"
-msgstr ""
+msgstr "To jest link do cen, opisów, map i dużo więcej:"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
