--- a/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/hw_lang.po
@@ -7455,23 +7455,23 @@ msgstr "les %d dernières "
 #: ../code/application/views/helpfile/pofields.php:693
 #, php-format
 msgid "Quich View"
-msgstr ""
+msgstr "Vue Rapide"
 
 #: ../code/application/views/helpfile/pofields.php:694
-#, fuzzy, php-format
+#, php-format
 msgid "Want to receive or send a PDF copy of this quote?"
-msgstr ""
-"Voulez-vous envoyer une copie PDF de cette page ou un devis par e-mail ?"
+msgstr "Voulez-vous recevoir ou envoyer une copie PDF de ce devis ?"
 
 #: ../code/application/views/helpfile/pofields.php:695
 #, php-format
 msgid "%s has sent you a message: "
-msgstr ""
+msgstr "%s vous a envoyé un message :"
 
 #: ../code/application/views/helpfile/pofields.php:696
 #, php-format
 msgid "Here is the link to see the prices, description, maps and much more:"
 msgstr ""
+"Voici le lien pour voir les prix, descriptions, cartes et bien plus encore:"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
