--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-15 17:36+0200\n"
-"PO-Revision-Date: 2013-03-11 21:31+0200\n"
+"PO-Revision-Date: 2013-03-16 21:42+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -7333,24 +7332,25 @@ msgstr "az utolsó %d"
 #: ../code/application/views/helpfile/pofields.php:693
 #, php-format
 msgid "Quich View"
-msgstr ""
+msgstr "Gyorsnézet"
 
 #: ../code/application/views/helpfile/pofields.php:694
-#, fuzzy, php-format
+#, php-format
 msgid "Want to receive or send a PDF copy of this quote?"
 msgstr ""
-"Szeretne PDF formátumú másolatot küldeni e-mailen erről az oldalról vagy az "
-"ajánlatról? "
+"Szeretne PDF formátumú másolatot kapni vagy küldeni erről az ajánlatról? "
 
 #: ../code/application/views/helpfile/pofields.php:695
 #, php-format
 msgid "%s has sent you a message: "
-msgstr ""
+msgstr "%s üzenetet küldött Önnek:"
 
 #: ../code/application/views/helpfile/pofields.php:696
 #, php-format
 msgid "Here is the link to see the prices, description, maps and much more:"
 msgstr ""
+"Ezen a linken találja az árakat, a leírást, a terképeket és még sok más "
+"hasznos információt:"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
